--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
   },
   "dependencies": {
     "expo": "^18.0.3",
+    "firebase": "^4.1.3",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.45.1",
     "react-native-elements": "^0.13.0",
+    "react-native-fbsdk": "^0.6.1",
+    "react-native-fbsdklogin": "^0.0.8",
     "react-navigation": "^1.0.0-beta.11",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^4.8.2",
     "redux-thunk": "^2.2.0"
   }
 }
