--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "lodash": "^4.17.4",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.45.1",
+    "react-native-datepicker": "^1.6.0",
     "react-native-elements": "^0.13.0",
     "react-native-fbsdk": "^0.6.1",
     "react-native-fbsdklogin": "^0.0.8",
+    "react-native-flip-view": "^1.0.5",
     "react-navigation": "^1.0.0-beta.11",
     "redux-logger": "^3.0.6",
     "redux-persist": "^4.8.2",
