--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^18.0.3",
     "firebase": "^4.1.3",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.45.1",
     "react-native-datepicker": "^1.6.0",
