--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "jest-expo": "~18.0.0",
-    "react-native-scripts": "0.0.40",
+    "jest-expo": "^20.0.0",
+    "react-native-scripts": "^1.2.1",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -19,20 +19,20 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^18.0.3",
-    "firebase": "^4.1.3",
+    "expo": "^20.0.1",
+    "firebase": "^4.3.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.45.1",
+    "react-native": "^0.47.1",
     "react-native-datepicker": "^1.6.0",
-    "react-native-elements": "^0.13.0",
+    "react-native-elements": "^0.16.0",
     "react-native-fbsdk": "^0.6.1",
     "react-native-fbsdklogin": "^0.0.8",
     "react-native-flip-view": "^1.0.5",
     "react-navigation": "^1.0.0-beta.11",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^4.8.2",
+    "redux-persist": "^4.9.1",
     "redux-thunk": "^2.2.0"
   }
 }
