--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "jest-expo": "^20.0.0",
-    "react-native-scripts": "^1.3.1",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "jest-expo": "^29.0.0",
+    "react-native-scripts": "^1.14.0",
+    "react-test-renderer": "^16.4.2"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -19,20 +19,20 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^20.1.3",
-    "firebase": "^4.3.1",
-    "lodash": "^4.17.4",
-    "moment": "^2.18.1",
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.47.2",
-    "react-native-datepicker": "^1.6.0",
-    "react-native-elements": "^0.16.0",
-    "react-native-fbsdk": "^0.6.1",
+    "expo": "^29.0.0",
+    "firebase": "^5.3.1",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
+    "react": "16.3.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-elements": "^0.19.1",
+    "react-native-fbsdk": "^0.7.0",
     "react-native-fbsdklogin": "^0.0.8",
     "react-native-flip-view": "^1.0.5",
-    "react-navigation": "^1.0.0-beta.11",
+    "react-navigation": "^2.9.3",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^4.9.1",
-    "redux-thunk": "^2.2.0"
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0"
   }
 }
