--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "expo": "^29.0.0",
-    "firebase": "^5.3.1",
+    "firebase": "^5.4.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "react": "16.3.1",
@@ -31,6 +31,7 @@
     "react-native-fbsdklogin": "^0.0.8",
     "react-native-flip-view": "^1.0.5",
     "react-navigation": "^2.9.3",
+    "react-redux": "^5.0.7",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0"
