--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "firebase": "^5.4.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
-    "react": "16.3.1",
+    "react": "^16.4.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
     "react-native-fbsdk": "^0.7.0",
     "react-native-fbsdklogin": "^0.0.8",
     "react-native-flip-view": "^1.0.5",
-    "react-navigation": "^2.9.3",
+    "react-navigation": "^2.12.1",
     "react-redux": "^5.0.7",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
